[S07P22D203-605|BACK] 그림 조회 테스트
Former-commit-id: 9d5d5b8cc7bd31c6e319f37e4c5ec5bb8fcd09fa [formerly 6a0c895a1e793eb32b87aad09479a47913361364]
Former-commit-id: 8440a4f729c01e8cef1628a97a09e6ef2e7d433e